// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleFull renders a 'error' message when an error happen during load 1`] = `"<article class=\\"ArticleFull\\">An error happened, please try again later.</article>"`;

exports[`ArticleFull renders a 'not found' error when the article doesn't exist 1`] = `"<article class=\\"ArticleFull\\">This article doesn't exist.</article>"`;

exports[`ArticleFull renders the article when it exists and user is logged in 1`] = `
"<article class=\\"ArticleFull\\">
  <h2 class=\\"TitleLevel2 ArticleFull__title\\">title</h2>
  <div class=\\"ArticleFull__author_name\\">by username</div>
  <div class=\\"ArticleFull__content\\">content</div>
  <div class=\\"ArticleFull__commentInputContainer\\">
    <form action=\\"#\\" name=\\"article-form\\" class=\\"Form\\">
      <div class=\\"TextAreaFormGroup\\"><label class=\\"Label\\" for=\\"content\\">Post a new comment</label><textarea id=\\"content\\" class=\\"TextArea\\" name=\\"content\\"></textarea></div>
      <div class=\\"FormButtonsContainer\\"><button type=\\"submit\\" class=\\"Button \\">Submit</button></div>
    </form>
  </div>
  <div class=\\"ArticleFull__comments\\">
    <h3>Comments</h3>
  </div>
</article>"
`;

exports[`ArticleFull renders the article when it exists and user is not logged in 1`] = `
"<article class=\\"ArticleFull\\">
  <h2 class=\\"TitleLevel2 ArticleFull__title\\">title</h2>
  <div class=\\"ArticleFull__author_name\\">by username</div>
  <div class=\\"ArticleFull__content\\">content</div>
  <div>Login to leave a comment.</div>
  <div class=\\"ArticleFull__comments\\">
    <h3>Comments</h3>
  </div>
</article>"
`;
